WARNING: REVERT TO THE COMMIT BEFORE IN CASE THIS ISNT GOOD I attempted toclear warnings from controllers, there are some problems though : LOTS OF WARNINGS STILL ON: FOLDERS CONTROLLER : FIELD CAN BE CONVERTED TO LOCAL VARIABLES PARAMS MIGHT BE WEIRD MORE E SHIT COMMENTED OUT CODE FOR NOW
SAME FOR MAIN MENU SCREEN VIEW CONTROLLER

SOME WARNINGS ON:
BREAK REMINDER : ACTION EVENT E IS WEIRD?
EDIT CARD CONTROLLER : THINGS ARE FINE
FLASHCARDSCREENCONTROLLER : MORE e SHIT AND PRIVATE FIELD IS ASSIGNED BUT NOT ACCESSED
NOTEBOOK CONTROLLER
	WEIRD E SHIT AGAIN AND SOME STUFF THAT CAN BE LOCAL VARIABLES OR FIELDS THAT ARE ASSIGNED BUT NOT ACCESSED

TODOLIST CONTROLLER :
FIELDS CAN BE CONVERTED TO LOCAL VARIABLE
PRIVATE FIELD ASSIGNED BUT NEVER ACCESSED
PARAMETER E IS NEVER USED EEEEEEEEEEEEEEEEEEEEEEEEEEEE